@@ -21,7 +21,7 @@ class StreamingResponseEntityUtilTest {
             ResponseEntity<byte[]> response = StreamingResponseEntityUtil.createResponseEntity(inputStream, httpRangeList);
 
             assertEquals(HttpStatus.OK, response.getStatusCode().value());
-            String contentLength = response.getHeaders().get("Content-Length").get(0);
+            String contentLength = response.getHeaders().get("Content-Length").getFirst();
             assertEquals("3248752", contentLength);
         }
     }
@@ -34,9 +34,9 @@ class StreamingResponseEntityUtilTest {
             ResponseEntity<byte[]> response = StreamingResponseEntityUtil.createResponseEntity(inputStream, httpRangeList);
 
             assertEquals(HttpStatus.PARTIAL_CONTENT, response.getStatusCode().value());
-            String contentLength = response.getHeaders().get("Content-Length").get(0);
+            String contentLength = response.getHeaders().get("Content-Length").getFirst();
             assertEquals("3238752", contentLength);
-            assertEquals("bytes 10000-3248751/3248752", response.getHeaders().get("Content-Range").get(0));
+            assertEquals("bytes 10000-3248751/3248752", response.getHeaders().get("Content-Range").getFirst());
         }
     }
 
@@ -49,10 +49,10 @@ class StreamingResponseEntityUtilTest {
 
             assertEquals(HttpStatus.PARTIAL_CONTENT, response.getStatusCode().value());
 
-            String contentLength = response.getHeaders().get("Content-Length").get(0);
+            String contentLength = response.getHeaders().get("Content-Length").getFirst();
 
             assertEquals("1501", contentLength);
-            assertEquals("bytes 1000-2500/3248752", response.getHeaders().get("Content-Range").get(0));
+            assertEquals("bytes 1000-2500/3248752", response.getHeaders().get("Content-Range").getFirst());
         }
 
     }
@@ -66,10 +66,10 @@ class StreamingResponseEntityUtilTest {
 
             assertEquals(HttpStatus.PARTIAL_CONTENT, response.getStatusCode().value());
 
-            String contentLength = response.getHeaders().get("Content-Length").get(0);
+            String contentLength = response.getHeaders().get("Content-Length").getFirst();
 
             assertEquals("3248752", contentLength);
-            assertEquals("bytes 0-3248751/3248752", response.getHeaders().get("Content-Range").get(0));
+            assertEquals("bytes 0-3248751/3248752", response.getHeaders().get("Content-Range").getFirst());
         }
 
     }
@@ -83,8 +83,8 @@ class StreamingResponseEntityUtilTest {
 
             assertEquals(HttpStatus.PARTIAL_CONTENT, response.getStatusCode().value());
 
-            assertEquals("3248752", response.getHeaders().get("Content-Length").get(0));
-            assertEquals("bytes 0-3248751/3248752", response.getHeaders().get("Content-Range").get(0));
+            assertEquals("3248752", response.getHeaders().get("Content-Length").getFirst());
+            assertEquals("bytes 0-3248751/3248752", response.getHeaders().get("Content-Range").getFirst());
         }
 
     }
