@@ -66,7 +66,7 @@ class TranscriptionMapperTest {
         transcription.setTranscriptionStatus(transcriptionStatus);
 
         List<Transcript> transcripts = caseTranscriptionMapper.getTranscriptList(caseTranscriptionMapper.mapResponse(List.of(transcription)));
-        Transcript transcript = transcripts.get(0);
+        Transcript transcript = transcripts.getFirst();
         assertEquals(1, transcript.getTranscriptionId());
         assertEquals(LocalDate.of(2023, 6, 20), transcript.getHearingDate());
         assertEquals("SENTENCING_REMARKS", transcript.getType());
@@ -80,7 +80,7 @@ class TranscriptionMapperTest {
         HearingEntity hearing1 = CommonTestDataUtil.createHearing("case1", LocalTime.NOON);
         List<TranscriptionEntity> transcriptionList = CommonTestDataUtil.createTranscriptionList(hearing1);
 
-        transcriptionList.get(0).setIsCurrent(false);
+        transcriptionList.getFirst().setIsCurrent(false);
 
         List<Transcript> transcripts = caseTranscriptionMapper.getTranscriptList(caseTranscriptionMapper.mapResponse(transcriptionList));
         assertEquals(0, transcripts.size());
