@@ -183,7 +183,7 @@ class TranscriptionDownloaderTest {
             .thenReturn(List.of(new TranscriptionDocumentEntity()));
 
         var transcriptionDocuments = someTranscriptionDocumentsUploadedAtLeast2DaysAgo(1);
-        transcriptionDocuments.get(0).setHidden(true);
+        transcriptionDocuments.getFirst().setHidden(true);
 
         var transcription = someTranscriptionWith(transcriptionDocuments);
         when(transcriptionRepository.findById(transcription.getId())).thenReturn(Optional.of(transcription));
@@ -201,7 +201,7 @@ class TranscriptionDownloaderTest {
         when(userIdentity.userHasGlobalAccess(Set.of(SUPER_ADMIN))).thenReturn(true);
 
         var transcriptionDocuments = someTranscriptionDocumentsUploadedAtLeast2DaysAgo(1);
-        var transcriptionDocument = transcriptionDocuments.get(0);
+        var transcriptionDocument = transcriptionDocuments.getFirst();
         transcriptionDocument.setHidden(true);
 
         var transcription = someTranscriptionWith(transcriptionDocuments);
